--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -29,6 +29,6 @@
     <% end %>
     </div>
   </div>
-</div>  <!-- div in più ma ok: loop in uscita -->
+</div>  <!-- div in piï¿½ ma ok: loop in uscita -->
 <%= render :partial => 'blocco_sidebar1' %>
 
