--- a/app/views/editorial/_blocco_edizioni.html.erb
+++ b/app/views/editorial/_blocco_edizioni.html.erb
@@ -7,7 +7,7 @@
     <% @block_projects.each do |prj| %>
         <div class="fs-content-layout fs-block-edizioni">
           <div class="fs-content-layout-row">
-            <div class="fs-layout-cell layout-item-0" style="width: 100%">
+            <div class="fs-layout-cell" style="width: 100%">
               <div class="fs-postheader fs-blockheader-edizioni">
                 <%= link_to(h(prj.name), url_for(:controller => 'editorial', :action => "edizione", :id => prj.id, :escape => false)) %>
                </div>
@@ -17,7 +17,7 @@
     <% end %>
     <div class="fs-content-layout fs-block-edizioni">
       <div class="fs-content-layout-row">
-        <div class="fs-layout-cell layout-item-0" style="width: 100%;">
+        <div class="fs-layout-cell" style="width: 100%;">
           <div class="fs-postheader fs-blockheader-edizioni" style="height: 30px; padding-top:15px ;">
             <%= link_to "Tutte le edizioni ... ", url_for(:controller => 'editorial', :action => "edizioni", :escape => false), :class => "fs-rosso-button" %>
           </div>
