--- a/public/stylesheets/application_fs.css
+++ b/public/stylesheets/application_fs.css
@@ -310,3 +310,24 @@ box-shadow: 5px 5px rgba(80,122,170,0.1);
 .separticle{border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px}
 .privacy{}
 .pri{}
+.yui-skin-sam .yui-toolbar-container .yui-toolbar-editcode span.yui-toolbar-icon {
+    background-image:  url(../images/html_editor.gif);
+    background-position: 0 1px;
+    left: 5px;
+}
+.yui-skin-sam .yui-toolbar-container .yui-button-editcode-selected span.yui-toolbar-icon {
+    background-image: url(../images/html_editor.gif );
+    background-position: 0 1px;
+    left: 5px;
+}
+.editor-hidden {
+    visibility: hidden;
+    top: -9999px;
+    left: -9999px;
+    position: absolute;
+}
+textarea {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
