--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -1,99 +1,58 @@
 <%= f.error_messages %>
-<%# include_yui_editor_if_used %>
-<!-- Skin CSS file -->
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/assets/skins/sam/skin.css">
-<!-- Utility Dependencies -->
-<script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
-<script src="http://yui.yahooapis.com/2.9.0/build/element/element-min.js"></script>
-<!-- Needed for Menus, Buttons and Overlays used in the Toolbar -->
-<script src="http://yui.yahooapis.com/2.9.0/build/container/container_core-min.js"></script>
-<script src="http://yui.yahooapis.com/2.9.0/build/menu/menu-min.js"></script>
-<script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
-<!-- Source file for Rich Text Editor-->
-<script src="http://yui.yahooapis.com/2.9.0/build/editor/editor-min.js"></script>
+
+<% content_for :header_yui do %>
+  <%# include_yui_editor_if_used %>
+  <!-- Skin CSS file -->
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/assets/skins/sam/skin.css">
+  <!-- Utility Dependencies -->
+  <script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
+  <script src="http://yui.yahooapis.com/2.9.0/build/element/element-min.js"></script>
+  <!-- Needed for Menus, Buttons and Overlays used in the Toolbar -->
+  <script src="http://yui.yahooapis.com/2.9.0/build/container/container_core-min.js"></script>
+  <script src="http://yui.yahooapis.com/2.9.0/build/menu/menu-min.js"></script>
+  <script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
+  <!-- Source file for Rich Text Editor-->
+  <script src="http://yui.yahooapis.com/2.9.0/build/editor/editor-min.js"></script>
+
+  <script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
+
+  <%= javascript_include_tag "yui/yui_fs.js" %>
+<% end %>
 
 <script type="text/javascript" charset="utf-8">
 (function() {
+  var myConfig1 = {
+      handleSubmit: true,
+      height: '400px',
+      width: '95%',
+      resize: true,
+      animate: true,
+      dompath: true,
+      focusAtStart: true,
+      nodeChangeDelay: false,
+      removeLineBreaks: true,
+      drag: true
+  };
+  //initia l'editor per una test area in particolare
+  var myEditor1 = init_yui_editor_fs('group_banner_didascalia', myConfig1);
 
-    var state = 'off';
-
-    var myConfig = {
-        handleSubmit: true,
-        height: '400px',
-        width: '95%',
-        animate: true,
-        dompath: true,
-        focusAtStart: true
-    };
-
-    var Dom = YAHOO.util.Dom,
-        Event = YAHOO.util.Event;
-
-</script>
-
-<script type="text/javascript" charset="utf-8">
-
-function init_yui_editor_fs(id_textarea, myconfig)
-
-    var myEditor = new YAHOO.widget.Editor('group_banner_didascalia', myConfig);
-    myEditor.on('toolbarLoaded', function() {
-        var codeConfig = {
-            type: 'push', label: 'Edit HTML Code', value: 'editcode'
-        };
-        this.toolbar.addButtonToGroup(codeConfig, 'insertitem');
-
-        this.toolbar.on('editcodeClick', function() {
-            var ta = this.get('element'),
-                iframe = this.get('iframe').get('element');
-
-            if (state == 'on') {
-                state = 'off';
-                this.toolbar.set('disabled', false);
-                this.setEditorHTML(ta.value);
-                if (!this.browser.ie) {
-                    this._setDesignMode('on');
-                }
-
-                Dom.removeClass(iframe, 'editor-hidden');
-                Dom.addClass(ta, 'editor-hidden');
-                this.show();
-                this._focusWindow();
-            } else {
-                state = 'on';
-                this.cleanHTML();
-                Dom.addClass(iframe, 'editor-hidden');
-                Dom.removeClass(ta, 'editor-hidden');
-                this.toolbar.set('disabled', true);
-                this.toolbar.getButtonByValue('editcode').set('disabled', false);
-                this.toolbar.selectButton('editcode');
-                this.dompath.innerHTML = 'Editing HTML Code';
-                this.hide();
-            }
-            return false;
-        }, this, true);
-
-        this.on('cleanHTML', function(ev) {
-            this.get('element').value = ev.html;
-        }, this, true);
-
-        this.on('afterRender', function() {
-            var wrapper = this.get('editor_wrapper');
-            wrapper.appendChild(this.get('element'));
-            this.setStyle('width', '100%');
-            this.setStyle('height', '100%');
-            this.setStyle('visibility', '');
-            this.setStyle('top', '');
-            this.setStyle('left', '');
-            this.setStyle('position', '');
-
-            this.addClass('editor-hidden');
-        }, this, true);
-    }, myEditor, true);
-    myEditor.render();
-
-}
+  //Esempio secondo editore html nella stessa pagina
+  //<div class="yui-skin-sam">
+  //  <p><%= f.text_area :espositore, :label => :field_espositore, :required => true %></p>
+  //</div>
+  //var myConfig2 = {
+  //    handleSubmit: true,
+  //    height: '400px',
+  //    width: '95%',
+  //    animate: true,
+  //    dompath: true,
+  //    focusAtStart: true
+  //};
+  //init_yui_editor_fs('group_banner_espositore', myConfig2);
+})();
 
 </script>
+
 <div class="box tabular">
   <p><%= f.text_field :espositore, :label => :field_espositore, :required => true %></p>
   <p><%= f.text_field :url, :label => :field_url, :required => true, :size => 80 %></p>
@@ -109,11 +68,8 @@ function init_yui_editor_fs(id_textarea, myconfig)
 <div class="yui-skin-sam">
   <p><%= f.text_area :didascalia, :name => 'group_banner[didascalia]', :required => false, :cols => 120, :rows => 15 %>  </p>
  </div>
- <button id="btn_ante" onclick="javascript: return mostraRaw();" >Anteprima</button>
-<hr />
-  <div id="div_ante" class="anteprima">
-  </div>
-<hr />
+
+
   <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %></p>
   <p><%= f.text_field :impressions_history, :label => :field_impressions_history, :size => 3 %></p>
 </div>
