--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -21,6 +21,7 @@
 <!-- page specific tags -->
 <%= yield :header_tags -%>
   <!-- end page specific tags -->
+<%= yield :header_yui -%>
 </head>
 <body class="<%=h body_css_classes %>">
 <div id="wrapper">
