--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1131,3 +1131,4 @@ textarea {
     margin: 0;
     padding: 0;
 }
+.htmldraft{padding:20px; margin-top: 1em; background: url(../images/draft.png)}
