--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -1,77 +1,77 @@
 <%= f.error_messages %>
 
-<% content_for :header_yui do %>
-  <%# include_yui_editor_if_used %>
-  <!-- Skin CSS file -->
-  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.9.0/build/assets/skins/sam/skin.css">
-  <!-- Utility Dependencies -->
-  <script src="http://yui.yahooapis.com/2.9.0/build/yahoo-dom-event/yahoo-dom-event.js"></script>
-  <script src="http://yui.yahooapis.com/2.9.0/build/element/element-min.js"></script>
-  <!-- Needed for Menus, Buttons and Overlays used in the Toolbar -->
-  <script src="http://yui.yahooapis.com/2.9.0/build/container/container_core-min.js"></script>
-  <script src="http://yui.yahooapis.com/2.9.0/build/menu/menu-min.js"></script>
-  <script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
-  <!-- Source file for Rich Text Editor-->
-  <script src="http://yui.yahooapis.com/2.9.0/build/editor/editor-min.js"></script>
-
-  <script src="http://yui.yahooapis.com/2.9.0/build/button/button-min.js"></script>
-
-  <%= javascript_include_tag "yui/yui_fs.js" %>
-<% end %>
-
-<script type="text/javascript" charset="utf-8">
-(function() {
-  var myConfig1 = {
-      handleSubmit: true,
-      height: '400px',
-      width: '95%',
-      resize: true,
-      animate: true,
-      dompath: true,
-      focusAtStart: true,
-      nodeChangeDelay: false,
-      removeLineBreaks: true,
-      drag: true
-  };
-  //initia l'editor per una test area in particolare
-  var myEditor1 = init_yui_editor_fs('group_banner_didascalia', myConfig1);
-
-  //Esempio secondo editore html nella stessa pagina
-  //<div class="yui-skin-sam">
-  //  <p><%= f.text_area :espositore, :label => :field_espositore, :required => true %></p>
-  //</div>
-  //var myConfig2 = {
-  //    handleSubmit: true,
-  //    height: '400px',
-  //    width: '95%',
-  //    animate: true,
-  //    dompath: true,
-  //    focusAtStart: true
-  //};
-  //init_yui_editor_fs('group_banner_espositore', myConfig2);
-})();
-
-</script>
-
 <div class="box tabular">
   <p><%= f.text_field :espositore, :label => :field_espositore, :required => true %></p>
+
   <p><%= f.text_field :url, :label => :field_url, :required => true, :size => 80 %></p>
+
   <p><%= f.text_field :priorita, :label => :field_priorita, :size => 3 %></p>
+
   <p><%= f.text_field :posizione, :label => :field_posizione, :required => true, :size => 80 %></p>
+
   <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
+
   <p><%= f.text_field :banner, :label => :field_banner, :required => true, :size => 80 %></p>
+
   <p><%= f.text_field :impressions, :label => :field_impressions, :size => 3 %></p>
+
   <p><%= f.text_field :clicks, :label => :field_clicks, :size => 3 %></p>
+
   <p><%# f.text_area :didascalia, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
+
   <p><%# f.text_area :didascalia, :required => false, :cols => 60, :rows => 15, :class => 'rich_text_editor' %></p>
-<hr />
-<div class="yui-skin-sam">
-  <p><%= f.text_area :didascalia, :name => 'group_banner[didascalia]', :required => false, :cols => 120, :rows => 15 %>  </p>
- </div>
+  <hr/>
+  <div class="yui-skin-sam">
+    <p><%= f.text_area :didascalia, :name => 'group_banner[didascalia]', :required => false, :cols => 120, :rows => 15 %>  </p>
+  </div>
 
 
   <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %></p>
+
   <p><%= f.text_field :impressions_history, :label => :field_impressions_history, :size => 3 %></p>
 </div>
 
-<%# wikitoolbar_for 'didascalia' %>
+<% content_for :header_yui do %>
+    <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
+    <%=	javascript_include_tag "yui/yahoo-dom-event.js" %>
+    <%= javascript_include_tag "yui/element-min.js" %>
+    <%= javascript_include_tag "yui/container_core-min.js" %>
+    <%= javascript_include_tag "yui/menu-min.js" %>
+    <%= javascript_include_tag "yui/button-min.js" %>
+    <%= javascript_include_tag "yui/editor-min.js" %>
+    <%= javascript_include_tag "yui/yui_fs.js" %>
+<% end %>
+<script type="text/javascript" charset="utf-8">
+    (function () {
+        var myConfig1 = {
+            handleSubmit:true,
+            height:'400px',
+            width:'95%',
+            resize:true,
+            animate:true,
+            dompath:true,
+            focusAtStart:true,
+            nodeChangeDelay:false,
+            removeLineBreaks:true,
+            drag:true
+        };
+        //initia l'editor per una test area in particolare
+        var myEditor1 = init_yui_editor_fs('group_banner_didascalia', myConfig1);
+        //Esempio secondo editore html nella stessa pagina
+        //<div class="yui-skin-sam">
+        //  <p>
+        //  <#" f.text_area :espositore, :label => :field_espositore, :required => true %></p>
+        //</div>
+        //var myConfig2 = {
+        //    handleSubmit: true,
+        //    height: '400px',
+        //    width: '95%',
+        //    animate: true,
+        //    dompath: true,
+        //    focusAtStart: true
+        //};
+        //init_yui_editor_fs('group_banner_espositore', myConfig2);
+    })
+            ();
+
+</script>
