--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -21,8 +21,10 @@
   -->
   <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
   <%# stylesheet_link_tag 'application_fs', :media => 'all' %>
-  <%= stylesheet_link_tag 'editorial', :media => 'print' %>
+   <%= stylesheet_link_tag 'editorial', :media => 'print' %>
   <!--   styles per il Front End  -->
+  <!-- yui page specific tags -->
+  <%= yield :header_yui -%>
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
